# Gaia-spots

./: LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.py  tox.ini
docs/: conf.py  index.rst
gaia_spots/: __init__.py  example_mod.py
gaia_spots/notebooks/: AUMic_vizier_votable.vot  Fit_SEDs.ipynb  Photometric_variability_model.ipynb  accessing_gaia_data.ipynb  friendly_stars.ipynb  median_bin.py  model_photometric_variabilities.ipynb
licenses/: LICENSE.rst
