[build-system]
requires = [
  "setuptools>=61.2",
  "setuptools_scm[toml]>=6.2",
  "wheel",

  "extension-helpers",
  "oldest-supported-numpy",
  "cython"

]
build-backend = "setuptools.build_meta"

[project]
name = "gaia_spots"
description = "This is a repository for the analysis and organization of a project that uses Gaia variabilities to infer spot characteristics."
readme = "README.rst"
requires-python = ">=3.10"
license = { file = "licenses/LICENSE.rst", content-type = "text/plain" }

authors = [
  { name = "William Waalkes", email = "william.waalkes@dartmouth.edu" },
]

dependencies = [
  
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-doctestplus",
]
docs = [
    "sphinx",
    "sphinx-automodapi",
    "tomli; python_version <\"3.11\"",
]


[project.scripts]
astropy_package_template_example = "gaia_spots.example_mod:main"



[project.urls]
repository = "https://github.com/will-waalkes/Gaia-spots"


[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]

[tool.setuptools_scm]

write_to = "gaia_spots/_version.py"



[tool.pytest.ini_options]
testpaths = [
  "gaia_spots",
  "docs",
]
doctest_plus = "enabled"
text_file_format = "rst"
addopts = "--doctest-rst"

[tool.coverage.run]
omit = [
 "gaia_spots/__init*",
 "gaia_spots/conftest.py",
 "gaia_spots/*setup_package*",
 "gaia_spots/tests/*",
 "gaia_spots/*/tests/*",
 "gaia_spots/extern/*",
 "gaia_spots/version*",
 "*/gaia_spots/__init*",
 "*/gaia_spots/conftest.py",
 "*/gaia_spots/*setup_package*",
 "*/gaia_spots/tests/*",
 "*/gaia_spots/*/tests/*",
 "*/gaia_spots/extern/*",
 "*/gaia_spots/version*",
]

[tool.coverage.report]
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",
  # Don't complain about packages we have installed
  "except ImportError",
  # Don't complain if tests don't hit assertions
  "raise AssertionError",
  "raise NotImplementedError",
  # Don't complain about script hooks
  "def main(.*):",
  # Ignore branches that don't pertain to this version of Python
  "pragma: py{ignore_python_version}",
  # Don't complain about IPython completion helper
  "def _ipython_key_completions_", 
]
